--- a/assets/static/html/todo/todo_index.html
+++ b/assets/static/html/todo/todo_index.html
@@ -1,65 +1,83 @@
 {% extends 'html/blank.html' %}
 {% load static %}
 {% block body %}
-
-<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">MyToDo</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Lists</a>
+    <div class="container border p-4">
+    <h1>{{ data.task_title }}</h1>
+    <hr></hr>
+    <span>{{ data.create_at }}</span>
+    <div class="mt-2">
+      <ul>
+        {% for tasks in dump%}
+          <li class=" p-4 rounded-3 mt-2 d-flex justify-content-between align-items-center">
+            <div>
+              <input type="text" class="task_input" value="{{tasks.task_name}}" id="task_{{tasks.id}}">
+            </div>
+            <div>
+              <svg id="empty_{{tasks.id}}" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="hide bi bi-asterisk" viewBox="0 0 16 16">
+                <path d="M8 0a1 1 0 0 1 1 1v5.268l4.562-2.634a1 1 0 1 1 1 1.732L10 8l4.562 2.634a1 1 0 1 1-1 1.732L9 9.732V15a1 1 0 1 1-2 0V9.732l-4.562 2.634a1 1 0 1 1-1-1.732L6 8 1.438 5.366a1 1 0 0 1 1-1.732L7 6.268V1a1 1 0 0 1 1-1z"/>
+              </svg>
+            </div>
           </li>
-        </ul>
-      </div>
+          <hr></hr>
+        {% endfor %}
+      </ul>
     </div>
-  </nav>
-  <div class="container border p-4">
-    <ul>
-      {% for i in data %}
-      <a class="list_anchor" href="edit/?pk={{i.id}}">
-        <li class="d-flex justify-content-between p-3 li_hover rounded-2">
-          <span>{{ i.task_title }}</span>
-          <span>{{ i.create_at }}</span>
-        </li>
-      </a>
-      <hr></hr>
-      {% endfor %}
-    </ul>
+    <!-- TEST STUFF -->
+    <!-- TEST STUFF -->
     <div class="d-flex justify-content-end align-items-center">
-      <button class="btn btn-success text-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Add New
+      <button class="btn btn-success text-dark" id="updateBtn" disabled>
+        Update
+      </button>
+      <button class="btn btn-primary text-dark ms-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Add Task
       </button>
     </div>
   </div>
-
-  <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <form method="POST">
-      {% csrf_token %}
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Add New List</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <div class="form-floating">
-            <input type="text" name="list_headding" class="form-control" id="floatingPassword" placeholder="List Headding">
-            <label for="floatingPassword">List Headding</label>
+  <!-- MODAL -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <form method="POST">
+        {% csrf_token %}
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Add Task</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="form-floating mb-3">
+              <input type="text" name="task_new" class="form-control"placeholder="Task" required>
+              <label for="floatingInput">Task</label>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Save</button>
           </div>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="submit" name="submit" class="btn btn-primary">Create List</button>
-        </div>
-      </div>
-    </form>
+      </form>
+      
+    </div>
   </div>
-</div>
 
+  <!--  -->
+  <script>
+    const updateBtn = document.getElementById('updateBtn');
 
-{% endblock %}
+    {% for tasks in dump%}
+      const task_{{tasks.id}} = document.getElementById('task_{{tasks.id}}');
+      const empty_{{tasks.id}} = document.getElementById('empty_{{tasks.id}}');
+
+      task_{{tasks.id}}.addEventListener("keyup",function(){
+        if( task_{{tasks.id}}.value  === "{{tasks.task_name}}"){
+          empty_{{tasks.id}}.classList.add("hide");
+          updateBtn.setAttribute('disabled','');
+        }
+        else{
+          empty_{{tasks.id}}.classList.remove("hide");
+          updateBtn.removeAttribute('disabled','');
+        }
+      });
+    {% endfor%}
+  </script>
+
+ {% endblock %}
